k8s/gateway/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: proyectom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: alexis246/proyectom-gateway:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
